# llmog

./: Cargo.toml  LICENSE  README.md  quantize.ipynb
.github/workflows/: ci.yml
src/: candle_model.rs  main.rs  mistralrs_local.rs  ollama.rs
training/: .gitignore  README.md  finetune.ipynb  pyproject.toml  quantize.ipynb  synthesize.ipynb
