[package]
name = "llmog"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.31", features = ["derive"] }
colorgrad = "0.7"
env_logger = "0.11.6"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
strip-ansi-escapes = "0.2.1"
termcolor = "1.4.1"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["v0_4_api"] }
hf-hub = { version = "0.4.2", features = ["tokio"] }
