[project]
name = "llm_training"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.1",
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
